<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.miglayout</groupId>
		<artifactId>miglayout-parent</artifactId>
		<version>11.1-SNAPSHOT</version>
	</parent>
	<artifactId>miglayout-javafx</artifactId>
    <name>MiGLayout JavaFX</name>
    <description>MiGLayout - Layout Manager for JavaFX</description>

	<properties>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.release>11</maven.compiler.release>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.testfx</groupId>
				<artifactId>testfx-core</artifactId>
				<version>4.0.15-alpha</version>
			</dependency>
			<dependency>
				<groupId>org.testfx</groupId>
				<artifactId>testfx-junit</artifactId>
				<version>4.0.15-alpha</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>miglayout-core</artifactId>
        </dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-base</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<scope>provided</scope>
		</dependency>

        <dependency>
			<groupId>org.testfx</groupId>
			<artifactId>testfx-core</artifactId>
        	<scope>test</scope>
        </dependency>
        <dependency>
			<groupId>org.testfx</groupId>
			<artifactId>testfx-junit</artifactId>
        	<scope>test</scope>
        </dependency>
    </dependencies>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<debug>true</debug>
					<debuglevel>lines,vars,source</debuglevel>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<dependencies>
					<dependency>
						<groupId>org.ow2.asm</groupId>
						<artifactId>asm</artifactId>
						<version>7.2</version>
					</dependency>
				</dependencies>
				<configuration>
					<argLine>
						--add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED,org.testfx
					</argLine>
				</configuration>
			</plugin>				
		</plugins>
	</build>
</project>
